--- a/rtl/embedded/Makefile.fpc
+++ b/rtl/embedded/Makefile.fpc
@@ -60,11 +60,6 @@ ifdef RELEASE
 override FPCOPT+=-Ur
 endif
 
-# Always include rtl.cfg config file for i8086
-ifeq ($(ARCH),i8086)
-override FPCOPT+=@rtl.cfg
-endif
-
 CPU_UNITS=
 SYSINIT_UNITS=
 CPU_SPECIFIC_COMMON_UNITS=$(SYSUTILSUNIT) $(MATHUNIT) $(CLASSESUNIT) \
@@ -187,6 +182,12 @@ CPU_UNITS_DEFINED=1
 ifeq ($(CPU_UNITS_DEFINED),)
 $(error No CPUs enabled for given SUBARCH, pass either a SUBARCH or set CPU_UNITS_DEFINED=1 if you know what you are doing)
 endif
+endif
+
+ifeq ($(ARCH),i8086)
+# Always include rtl.cfg config file for i8086
+override FPCOPT+=@rtl.cfg
+CPU_SPECIFIC_COMMON_UNITS=
 endif
 
 ifeq ($(ARCH),x86_64)
