--- a/rtl/embedded/Makefile.fpc
+++ b/rtl/embedded/Makefile.fpc
@@ -66,8 +66,12 @@ CPU_SPECIFIC_COMMON_UNITS=$(SYSUTILSUNIT) $(MATHUNIT) $(CLASSESUNIT) \
 			  $(FGLUNIT) $(MACPASUNIT) $(TYPINFOUNIT) $(TYPESUNIT) \
 			  $(RTLCONSTSUNIT) $(GETOPTSUNIT) $(LINEINFOUNIT)
 
+# Sysutils special deps
 SYSUTILS_DEPS_OS=$(HEAPMGRUNIT)$(PPUEXT)
+# Dos unit, local source
 DOSDIR=.
+# Dos unit uses objfpc mode
+DOS_DEPS_OS=objpas$(PPUEXT)
 
 ifeq ($(ARCH),aarch64)
 CPU_UNITS=$(RASPI3UNIT) $(MMIOUNIT) $(MAILBOXUNIT) $(RASPIUARTUNIT) $(GPIOUNIT)
