--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -27,10 +27,10 @@ CMEMUNIT=System.CMem
 COMMONUNIT=PalmApi.Common
 CONSOLEUNIT=System.Console
 CONSOLEIOUNIT=EmbeddedApi.ConsoleIO
-CORTEXM0UNIT=ARMApi.Cortexm0
-CORTEXM3UNIT=ARMApi.Cortexm3
-CORTEXM4UNIT=ARMApi.Cortexm4
-CORTEXM7UNIT=ARMApi.Cortexm7
+CORTEXM0UNIT=ARMApi.cortexm0
+CORTEXM3UNIT=ARMApi.cortexm3
+CORTEXM4UNIT=ARMApi.cortexm4
+CORTEXM7UNIT=ARMApi.cortexm7
 CP1250UNIT=System.CodePages.CP1250
 CP1251UNIT=System.CodePages.CP1251
 CP1252UNIT=System.CodePages.CP1252
