Set FPINTRESUNIT and OBJPASUNIT variables

--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -108,6 +108,7 @@ FE310G002UNIT=EmbeddedApi.fe310g002
 FGLUNIT=System.FGL
 FPCMEMDLLUNIT=System.FPCMemDLL
 FPCYLIXUNIT=fpcylix
+FPINTRESUNIT=fpintres
 FPWIDESTRINGUNIT=System.FPWideString
 FREEBSDUNIT=FreeBSDApi.FreeBSD
 GD32VF103XXUNIT=EmbeddedApi.gd32vf103xx
@@ -167,6 +168,7 @@ NWSERVUNIT=NetWareApi.Nwserv
 NWSNUTUNIT=NetWareApi.Nwsnut
 OBJCUNIT=objc
 OBJCBASEUNIT=objcbase
+OBJPASUNIT=objpas
 OS2DEFUNIT=OS2Api.os2def
 PAGEMEMUNIT=System.PageMem
 PILOTUNIT=PalmApi.Pilot
@@ -358,6 +360,7 @@ FE310G002UNIT=fe310g002
 FGLUNIT=fgl
 FPCMEMDLLUNIT=fpcmemdll
 FPCYLIXUNIT=fpcylix
+FPINTRESUNIT=fpintres
 FPWIDESTRINGUNIT=fpwidestring
 FREEBSDUNIT=freebsd
 GD32VF103XXUNIT=gd32vf103xx
@@ -417,6 +420,7 @@ NWSERVUNIT=nwserv
 NWSNUTUNIT=nwsnut
 OBJCUNIT=objc
 OBJCBASEUNIT=objcbase
+OBJPASUNIT=objpas
 OS2DEFUNIT=os2def
 PAGEMEMUNIT=pagemem
 PILOTUNIT=pilot
